multi-host-example/nginx-stage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-stage-service
  namespace: stage
spec:
  ports:
  - port: 8000 # the port that this service should serve on
    # the container on each pod to connect to, can be a name
    # (e.g. 'www') or a number (e.g. 80)
    targetPort: 80
    protocol: TCP
  # just like the selector in the deployment,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  selector:
    app: nginx-stage
