multi-host-example/proxy-test-ingress.yaml
{
  "apiVersion": "extensions/v1beta1",
  "kind": "Ingress",
  "metadata": {
    "name": "proxy-test-ingress",
    "namespace": "test",
    "annotations": {
      "ingress.kubernetes.io/proxy-redirect-from": "~^(http://[^:]+):\\d+(?<relpath>/.+)$ http://$http_host$relpath"
    }
  },
  "spec": {
    "rules": [
      {
        "host": "ingress1.com",
        "http": {
          "paths": [
            {
              "path": "/",
              "backend": {
                "serviceName": "nginx-test-service",
                "servicePort": 8000
              }
            },
            {
              "path": "/ibm",
              "backend": {
                "serviceName": "nginx-test-service",
                "servicePort": 8000
              }
            },
            {
              "path": "/smcfs",
              "backend": {
                "serviceName": "nginx-test-service",
                "servicePort": 8000
              }
            },
            {
              "path": "/isccsdev",
              "backend": {
                "serviceName": "nginx-test-service",
                "servicePort": 8000
              }
            },
            {
              "path": "/wscdev",
              "backend": {
                "serviceName": "nginx-test-service",
                "servicePort": 8000
              }
            }
          ]
        }
      }
    ]
  }
}
